--- a/style.css
+++ b/style.css
@@ -5,6 +5,156 @@
     font-family: 'Poppins', sans-serif;
 }
 
+/* Larger Media Screens */
+.body-container{
+    height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    position: relative;
+}
+
+/* Header */
+header{
+    border: 2px solid black;
+    height: 8vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    background-color: black;
+}
+
+header p{
+    font-size: 1.55rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    letter-spacing: 0.18rem;
+    color: white;
+}
+
+/* Button */
+.burger{
+    position: absolute;
+    right: 15px;
+    cursor: pointer;
+}
+
+.burger div{
+    width: 25px;
+    height: 3px;
+    background-color: white;
+    margin: 5px;
+    transition: 0.7s;
+}
+
+/* Nav */
+nav{
+    height: 92vh;
+    width: 30vw;
+    position: absolute;
+    top: 8vh;
+    right: 0;
+    background: #d4d4d4;
+    transform: translateX(100%);
+    transition: 0.5s ease-in-out;
+    color: white;
+}
+
+.inputGoals{
+    height: 45vh;
+    width: 30vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.depositAmount{
+    height: 40vh;
+    width: 30vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.input{
+    margin: 8px;
+    width: 20vw;
+    height: 40px;
+    font-size: 1.1rem;
+    padding: 10px;
+    border: 2px solid gray;
+    border-radius: 35px;
+    outline: none;
+}
+
+.btn{
+    width: 10vw;
+    height: 35px;
+    border-radius: 35px;
+    font-size: 1.1rem;
+    background: #55bd71;
+    border: 2px solid #55bd71;
+    color: white;
+    letter-spacing: 0.18rem;
+    outline: none;
+    cursor: pointer;
+}
+
+.totalDeposit{
+    font-size: 26px;
+    margin-top: 20px;
+    height: 20vh;
+    display: flex;
+    align-items: center;
+}
+
+.display{
+    height: 30vh;
+    width: 100vw;
+    position: absolute;
+    top: 50%;
+    left: 0%;
+    transform: translate(0%,-50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    z-index: -10;
+}
+
+#savingItem{
+    font-size: 1.65rem;
+    font-weight: 500;
+    letter-spacing: 0.12rem;
+    text-transform: capitalize;
+    text-align: center;
+}
+
+#savingAmount{
+    font-size: 2.4rem;
+    font-weight: 500;
+    letter-spacing: 0.12rem;
+}
+
+#celebrate{
+    display: none;
+}
+
+/* Remove spinners from number inputs */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+
+
+
+
+/* Smaller media screens and mobile devices */
 @media only screen and (max-width: 768px){
     body{
         background-image: url(./img/bkg-1.jpeg);
@@ -71,7 +221,7 @@
     }
 
     .depositAmount{
-        height: 35vh;
+        height: 40vh;
         width: 100vw;
         display: flex;
         flex-direction: column;
@@ -95,8 +245,8 @@
         height: 35px;
         border-radius: 35px;
         font-size: 1.1rem;
-        background: gray;
-        border: 2px solid gray;
+        background: #55bd71;
+        border: 2px solid #55bd71;
         color: white;
         letter-spacing: 0.18rem;
         outline: none;
@@ -140,18 +290,19 @@
     #celebrate{
         display: none;
     }
-    /* JS Classes */
-    .active{
-        transform: translateX(0%);
-    }
+}
 
-    .rotate #line1{
-        transform: rotate(-45deg) translate(-1px,4px);
-    }
-    .rotate #line2{
-        display: none;
-    }
-    .rotate #line3{
-        transform: rotate(45deg) translate(-1px,-5px);
-    }
+ /* JS Classes */
+ .active{
+    transform: translateX(0%);
+}
+
+.rotate #line1{
+    transform: rotate(-45deg) translate(-1px,4px);
+}
+.rotate #line2{
+    display: none;
+}
+.rotate #line3{
+    transform: rotate(45deg) translate(-1px,-5px);
 }
