--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ nav{
     border: 2px solid gray;
     border-radius: 40px;
     outline: none;
+    transition: 0.35s;
 }
 
 .btn{
@@ -101,6 +102,7 @@ nav{
     letter-spacing: 0.18rem;
     outline: none;
     cursor: pointer;
+    transition: 0.35s;
 }
 
 .totalDeposit{
@@ -126,7 +128,7 @@ nav{
 }
 
 #savingItem{
-    font-size: 1.65rem;
+    font-size: 2rem;
     font-weight: 500;
     letter-spacing: 0.12rem;
     text-transform: capitalize;
@@ -149,6 +151,12 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+.input:focus{
+    width: 23vw;
+    border: 2.7px solid #5c5c5c;
+}
+
 
 
 
@@ -238,6 +246,7 @@ input::-webkit-inner-spin-button {
         border: 2px solid gray;
         border-radius: 35px;
         outline: none;
+        transition: 0.35s;
     }
 
     .btn{
@@ -289,6 +298,11 @@ input::-webkit-inner-spin-button {
 
     #celebrate{
         display: none;
+    }
+
+    .input:hover{
+        width: 75vw;
+        border: 2.7px solid #5c5c5c;
     }
 }
 
