Styled settings page

--- a/style.css
+++ b/style.css
@@ -301,6 +301,15 @@ input::-webkit-inner-spin-button {
         align-items: center;
     }
 
+    .settingsBtn{
+        font-size: 2.75rem;
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        text-shadow: 2px 2px 2px gray;
+        color: white;
+    }
+
     /* UI Display */
     .display{
         height: 30vh;
@@ -338,6 +347,89 @@ input::-webkit-inner-spin-button {
     .input:hover{
         width: 75vw;
         border: 2.7px solid #5c5c5c;
+    }
+
+/* Settings Page */
+    .settings-container{
+        height: 100vh;
+        width: 100vw;
+        background: #d4d4d4;
+    }
+
+    .settings-title{
+        height: 8vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .btn-container{
+        height: 8vh;
+        width: 14vw;
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .back-btn{
+        font-size: 2rem;
+        color: white;
+    }
+
+    .change-bkg{
+        position: absolute;
+        top: 12vh;
+    }
+
+    .change-bkg p{
+        padding: 10px;
+        font-size: 1.4rem;
+    }
+
+    .images{
+        height: 40vh;
+        width: 100vw;
+        display: grid;
+        grid-template-columns: auto auto auto;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    #img1, #img2, #img3, #img4, #img5, #img6{
+        background-size: cover;
+        object-fit: cover;
+        background-position: center;
+        height: 110px;
+        width: 110px;
+        border-radius: 15px;
+        box-shadow: 3px 2px 5px gray;
+    }
+
+    #img1{
+        background-image: url(/img/bkg-1.jpeg);
+    }
+
+    #img2{
+        background-image: url(/img/bkg-2.jpeg);
+    }
+
+    #img3{
+        background-image: url(/img/bkg-3.jpeg);
+    }
+
+    #img4{
+        background-image: url(/img/bkg-4.webp);
+    }
+
+    #img5{
+        background-image: url(/img/bkg-5.jpeg);
+    }
+
+    #img6{
+        background-image: url(/img/bkg-6.jpeg);
     }
 }
 
