--- a/style.css
+++ b/style.css
@@ -1,143 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-
-/* Larger Media Screens */
-body {
-  background-image: url(./img/bkg-1.jpeg);
-  background-size: cover;
-  background-position: center;
-  object-fit: cover;
-}
-
-.body-container {
-  height: 100vh;
-  width: 100vw;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  position: relative;
-}
-
-/* Header */
-header {
-  border: 2px solid black;
-  height: 8vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
-  background-color: black;
-}
-
-header p {
-  font-size: 1.37rem;
-  text-transform: uppercase;
-  font-weight: 500;
-  letter-spacing: 0.18rem;
-  color: white;
-}
-
-/* Button */
-.burger {
-  position: absolute;
-  right: 15px;
-  cursor: pointer;
-}
-
-.burger div {
-  width: 25px;
-  height: 2.75px;
-  background-color: white;
-  margin: 5px;
-  transition: 0.7s;
-}
-
-/* Nav */
-nav {
-  height: 92vh;
-  width: 30vw;
-  position: absolute;
-  top: 8vh;
-  right: 0;
-  background: #d4d4d4;
-  transform: translateX(100%);
-  transition: 0.5s ease-in-out;
-  color: white;
-}
-
-.input-container {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-}
-
-.clearBtn {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.inputGoals {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.depositAmount {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.input {
-  margin: 8px;
-  width: 70%;
-  height: 35px;
-  font-size: 1rem;
-  padding: 10px;
-  border: 1.5px solid gray;
-  border-radius: 35px;
-  outline: none;
-  transition: 0.35s;
-}
-
-#clearStorage {
-  height: 45px;
-  width: 12vw;
-  border-radius: 40px;
-}
-
-.btn {
-  width: 10vw;
-  height: 32.5px;
-  border-radius: 35px;
-  font-size: 1rem;
-  background: #55bd71;
-  border: 2px solid #3e7a4e;
-  color: white;
-  letter-spacing: 0.18rem;
-  outline: none;
-  cursor: pointer;
-  transition: 0.35s;
-}
-
-.totalDeposit {
-  font-size: 1.4rem;
-  margin-top: 20px;
-  display: flex;
-  align-items: center;
-}
-
 .settingsBtn {
   font-size: 2rem;
   position: absolute;
@@ -837,13 +697,13 @@ nav.open {
   transform: translateX(0%);
 }
 
-.rotate #line1 {
+.rotate .header__burger--line1 {
   transform: rotate(-45deg) translate(-1px, 4px);
 }
-.rotate #line2 {
+.rotate .header__burger--line2 {
   display: none;
 }
-.rotate #line3 {
+.rotate .header__burger--line3 {
   transform: rotate(45deg) translate(-1px, -5px);
 }
 
