--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,8 @@
 @import "base/base";
 
 @import "components/menu";
+@import "components/modal";
 @import "components/settings";
 
+@import "layout/display";
 @import "layout/header";
