--- a/sass/components/menu.scss
+++ b/sass/components/menu.scss
@@ -47,6 +47,16 @@
     align-items: center;
   }
 
+  &__settings-btn {
+    font-size: 2rem;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    text-shadow: 2px 2px 2px gray;
+    color: white;
+    cursor: pointer;
+  }
+
   &__btn {
     width: 10vw;
     height: 32.5px;
