--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -7,7 +7,7 @@
 
 /* Larger Media Screens */
 body {
-  // background-image: url(./img/bkg-1.jpeg);
+  background-image: url(../../img/bkg-1.jpeg);
   background-size: cover;
   background-position: center;
   object-fit: cover;
@@ -16,11 +16,18 @@ body {
 .body-container {
   height: 100vh;
   width: 100vw;
-  overflow-x: hidden;
+  // overflow-x: hidden;
   overflow-y: hidden;
   position: relative;
 }
 
 html {
   font-size: 62.5%;
+}
+
+/* Remove spinners from number inputs */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
