--- a/sass/layout/header.scss
+++ b/sass/layout/header.scss
@@ -4,28 +4,28 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px;
+  padding: 1rem;
   background-color: black;
 
   &__title {
     font-size: 2.2rem;
     text-transform: uppercase;
     font-weight: 500;
-    letter-spacing: 0.18rem;
+    letter-spacing: 0.28rem;
     color: white;
   }
 
   /* Button */
   &__burger {
     position: absolute;
-    right: 15px;
+    right: 1.5rem;
     cursor: pointer;
 
     &--line {
-      width: 25px;
-      height: 2.75px;
+      width: 2.5rem;
+      height: 0.275rem;
       background-color: white;
-      margin: 5px;
+      margin: 0.5rem;
       transition: 0.7s;
     }
   }
