--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 @import "base/base";
 
-@import "components/menu";
+@import "components/nav";
 @import "components/modal";
 @import "components/settings";
 
