--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,17 @@ body {
   position: relative; }
 
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  /* 10px */ }
+  @media only screen and (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media only screen and (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media only screen and (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 /* Remove spinners from number inputs */
 input::-webkit-outer-spin-button,
@@ -36,6 +46,9 @@ input::-webkit-inner-spin-button {
   transform: translateX(100%);
   transition: 0.5s ease-in-out;
   color: white; }
+  @media only screen and (max-width: 37.5em) {
+    .nav {
+      width: 100vw; } }
   .nav__input-container {
     height: 100%;
     width: 100%;
@@ -47,23 +60,36 @@ input::-webkit-inner-spin-button {
     display: flex;
     justify-content: center;
     align-items: center; }
+    @media only screen and (max-width: 37.5em) {
+      .nav__clear-btn {
+        height: 20vh; } }
   .nav__input-goals {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center; }
+    @media only screen and (max-width: 37.5em) {
+      .nav__input-goals {
+        height: 30vh; } }
   .nav__deposit-amount {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center; }
+    @media only screen and (max-width: 37.5em) {
+      .nav__deposit-amount {
+        height: 40vh; } }
   .nav__total-deposit {
     font-size: 2.2rem;
     margin-top: 2rem;
     display: flex;
     align-items: center; }
+    @media only screen and (max-width: 37.5em) {
+      .nav__total-deposit {
+        font-size: 2.6rem;
+        height: 10vh; } }
   .nav__settings-btn {
     font-size: 2rem;
     position: absolute;
@@ -72,6 +98,9 @@ input::-webkit-inner-spin-button {
     text-shadow: 2px 2px 2px gray;
     color: white;
     cursor: pointer; }
+    @media only screen and (max-width: 37.5em) {
+      .nav__settings-btn {
+        font-size: 3.6rem; } }
   .nav__btn {
     width: 10vw;
     height: 3.25rem;
@@ -84,6 +113,10 @@ input::-webkit-inner-spin-button {
     outline: none;
     cursor: pointer;
     transition: 0.35s; }
+    @media only screen and (max-width: 37.5em) {
+      .nav__btn {
+        width: 35vw;
+        height: 3.5rem; } }
 
 .input {
   margin: 0.8rem;
@@ -95,11 +128,24 @@ input::-webkit-inner-spin-button {
   border-radius: 3.5rem;
   outline: none;
   transition: 0.35s; }
+  @media only screen and (max-width: 37.5em) {
+    .input {
+      width: 65%;
+      height: 4rem;
+      font-size: 1.6rem; } }
+  .input:focus {
+    width: 80%;
+    border: 2px solid #5c5c5c; }
 
 #clear-storage {
   height: 4.5rem;
   width: 12vw;
   border-radius: 4rem; }
+  @media only screen and (max-width: 37.5em) {
+    #clear-storage {
+      width: 40vw;
+      position: absolute;
+      top: 10vh; } }
 
 /* Celebration display upon completion */
 .modal {
