--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -22,7 +22,20 @@ body {
 }
 
 html {
-  font-size: 62.5%;
+  // This defines what 1rem is
+  font-size: 62.5%; /* 10px */
+
+  @include respond(tab-land) {
+    font-size: 56.25%; // 1rem = 9px, 9/16 = 56.25%
+  }
+
+  @include respond(tab-port) {
+    font-size: 50%; // 1rem = 8px, 8/16 = 50%
+  }
+
+  @include respond(big-desktop) {
+    font-size: 75%; // 1rem = 12px, 12/16 = 75%
+  }
 }
 
 /* Remove spinners from number inputs */
