--- a/sass/components/settings.scss
+++ b/sass/components/settings.scss
@@ -9,6 +9,12 @@
   z-index: -10;
   transition: 0.25s ease-in-out;
 
+  @include respond(phone) {
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+  }
+
   &__header {
     background: #000;
     height: 8vh;
@@ -27,6 +33,10 @@
     justify-content: center;
     align-items: center;
 
+    @include respond(phone) {
+      width: 14vw;
+    }
+
     &--back {
       font-size: 2rem;
       color: white;
@@ -37,6 +47,10 @@
   &__title {
     font-size: 2rem;
     color: white;
+
+    @include respond(phone) {
+      font-size: 2.2rem;
+    }
   }
 
   &__change-bkg {
@@ -44,10 +58,18 @@
     width: 95%;
     margin: auto;
 
+    @include respond(phone) {
+      margin-top: 2vh;
+    }
+
     & p {
-      padding: 8px;
+      padding: 0.8rem;
       font-size: 1.7rem;
       border-bottom: 1px solid black;
+
+      @include respond(phone) {
+        padding: 1rem;
+      }
     }
   }
 
@@ -60,6 +82,11 @@
     justify-content: space-around;
     align-items: center;
 
+    @include respond(phone) {
+      height: 40vh;
+      width: 95vw;
+    }
+
     &--img {
       background-size: cover;
       object-fit: cover;
@@ -70,6 +97,12 @@
       box-shadow: 3px 2px 5px #3b3b3b;
       cursor: pointer;
       overflow: hidden;
+
+      @include respond(phone) {
+        height: 11rem;
+        width: 11rem;
+        border-radius: 1.5rem;
+      }
 
       & img {
         height: 100%;
@@ -84,10 +117,19 @@
     width: 95%;
     margin: auto;
 
+    @include respond(phone) {
+      margin-top: 2vh;
+    }
+
     & p {
       padding: 0.8rem;
       font-size: 1.05rem;
       border-bottom: 1px solid black;
+
+      @include respond(phone) {
+        padding: 1rem;
+        font-size: 1.7rem;
+      }
     }
   }
 
@@ -120,8 +162,16 @@
     align-items: center;
     border-top: 1px solid black;
 
+    @include respond(phone) {
+      padding: 1rem;
+    }
+
     & p {
       font-size: 1.6rem;
+
+      @include respond(phone) {
+        font-size: 1.7rem;
+      }
     }
 
     &--container {
@@ -132,6 +182,11 @@
       display: flex;
       align-items: center;
       transition: 0.25s;
+
+      @include respond(phone) {
+        height: 3rem;
+        border-radius: 3rem;
+      }
     }
 
     &--btn {
@@ -142,6 +197,11 @@
       transform: translateX(1%);
       transition: 0.25s;
       cursor: pointer;
+
+      @include respond(phone) {
+        height: 3rem;
+        width: 3rem;
+      }
     }
   }
 }
