larger media styles

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,7 @@
 
 @import "base/base";
 
-@import "componentss/nav";
+@import "components/nav";
 @import "components/modal";
 @import "components/settings";
 
