--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+.nav.open {
+  transform: translateX(0%); }
+
+.settings.open {
+  opacity: 1;
+  z-index: 10; }
+
+.rotate .line1 {
+  transform: rotate(-45deg) translate(-1px, 4px); }
+
+.rotate .line2 {
+  display: none; }
+
+.rotate .line3 {
+  transform: rotate(45deg) translate(-1px, -4px); }
+
+.current {
+  border: 5px solid #858585;
+  transform: scale(1.1); }
+
 * {
   padding: 0;
   margin: 0;
@@ -14,6 +34,7 @@ body {
 .body-container {
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
   overflow-y: hidden;
   position: relative; }
 
@@ -127,8 +148,8 @@ input::-webkit-inner-spin-button {
   transition: 0.35s; }
   @media only screen and (max-width: 37.5em) {
     .input {
-      width: 65%;
-      height: 4rem;
+      width: 70%;
+      height: 4.5rem;
       font-size: 1.6rem; } }
   .input:focus {
     width: 80%;
