--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -16,7 +16,7 @@ body {
 .body-container {
   height: 100vh;
   width: 100vw;
-  // overflow-x: hidden;
+  overflow-x: hidden;
   overflow-y: hidden;
   position: relative;
 }
